# ESP32-P4

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/apps/: CMakeLists.txt  apps.h
components/apps/homeass/: homepage.cpp  homepage.hpp
components/apps/homeass/assets/: img_app_homepage.c
components/apps/homeass/ui/: CMakeLists.txt  filelist.txt
components/apps/homeass/ui/screens/: ui_Screen_assets.c  ui_Screen_assets.h
components/apps/setting/: Setting.cpp  Setting.hpp
components/apps/setting/assets/: img_app_setting.c
components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingLight.c  ui_ScreenSettingMain.c  ui_ScreenSettingVerification.c  ui_ScreenSettingVolume.c  ui_ScreenSettingWiFi.c
components/assets/: CMakeLists.txt  assets.h
components/auth_storage/: CMakeLists.txt  auth_storage.c  auth_storage.h
components/sys_ui/: CMakeLists.txt  UIRefresher.cpp  UIRefresher.h
components/wifi/: CMakeLists.txt  WiFiManager.cpp  WiFiManager.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/dark/: core_data.h  recents_screen_data.h
